package fr.istic.taa.jaxrs.domain.enums;

public enum TypeNotification {
    NOUVEAU_CONCERT,
    RAPPEL,
    ANNULATION,
    MODIFICATION,
    OFFRE_SPECIALE
}